--- a/JAVASCRIPT_course/events.html
+++ b/JAVASCRIPT_course/events.html
@@ -19,8 +19,6 @@
 <div class="container">
   <div class="row">
     <div class="col text-center">
-
-
 <!-- 1 -->
       <div class="btn-group">
         <a href="#" class="btn btn-primary" onclick="alert('I am osm but no one use me')">simple inline alert</a>  
@@ -30,14 +28,49 @@
 <!-- 2 -->
       <div class="btn-group">
         <a href="#" class="btn btn-primary" onclick="callingFunction()">By calling a function</a>  
-      </div>
+      </div></br></br>
 <!-- 2 -->
 
+<!-- 3 -->
+      <div class="btn-group">
+        <a href="#" class="btn btn-primary" id="thirdway">By calling a function using document id</a>  
+      </div></br></br>
+<!-- 3 -->
 
-   </div>
+<!-- 4 -->
+      <div class="btn-group">
+        <a href="#" class="btn btn-primary" id="fourthway">Using event listeners </a>  
+      </div>
+<!-- 4 -->
+
+</div>
   </div>
 </div>
 
+
+
+
+<script>
+// 2
+const callingFunction = () => {
+alert('Here i simply call the function');
+}
+// 2
+
+// 3
+const thirdwala = document.getElementById('thirdway');
+thirdwala.onclick = function(){
+  alert('Here i am calling using id property');
+}
+// 3
+
+// 4
+const fourthwala = document.querySelector('#fourthway');        //used querySelecter just for fun
+fourthwala.addEventListener('click', () => {                    //Benefit of eventlistener is than you can call same event multiple
+  alert('Event Listener');                                      //times
+})
+// 4
+</script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
