--- a/JAVASCRIPT_course/9_time_based_events.html
+++ b/JAVASCRIPT_course/9_time_based_events.html
@@ -12,12 +12,18 @@
     <div class="container">
         <div class="row">
           <div class="col text-center">
-            <p>Want to know my name ?</p>
-            <p id="showMyName"></p><br>
-            <!-- <div class="btn-group"> -->
+            <!-- ✔️setTimeout -->
+            <!-- <p>Want to know my name ?</p>
+            <p id="myName"></p></br>
+            <div class="btn-group">
             <a class="btn btn-primary" id="btn">Click Here</a>  
-            <!-- </div></br></br> -->
-
+            </div></br></br> -->
+<!-- ----------------------------------------------------------------------------------------------------------------------------->
+            <!-- ✔️setInterval and clearInterval -->
+            <p>Can you stop me when i reach at 5 !</p>
+            <div class="btn-group">
+            <a class="btn btn-primary" id="btn">Start</a></div></br></br>
+            <a class="btn btn-primary" id="btn1">Stop</a> </div></br></br>
         </div>
     </div>
 </div>
@@ -26,17 +32,37 @@
 
 
 <script>
-const myName = document.querySelector('#showMyName');
+// const myName = document.querySelector('#myName');
+// const btn = document.querySelector('#btn');
+
+// const showMyName = () => {
+//   setTimeout(() => {
+// myName.innerHTML = "Sagar Verma"
+//   }, 1000)
+// }
+// btn.addEventListener('click', showMyName);
+
+
+// -------------------------------------------------------------------------------------------------------------------------------
+const timerstart = document.querySelector('p');
 const btn = document.querySelector('#btn');
-
-const showMyName = () => {
-  setTimeout(() => {
-myName.innerHTML = "Sagar Verma"
-  }, 1000)
+const btn1 = document.querySelector('#btn1');
+let timeRef;
+let num = 0;
+const showMyNum = () => {
+  timerstart.innerHTML = "Loading ...."
+  timeRef = setInterval(()  => {
+timerstart.innerHTML = `${num}`;
+num ++;
+}, 1000)
 }
-btn.addEventListener('click', showMyName);
+btn.addEventListener('click', showMyNum);
 
 
+btn1.addEventListener('click', () => {
+  clearInterval(timeRef);
+});
+</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
