--- a/JAVASCRIPT_course/9_time_based_events.html
+++ b/JAVASCRIPT_course/9_time_based_events.html
@@ -1,6 +1,9 @@
 <!-- 
 ✔️setTimeout(function, milliseconds) - Executes a function after a specified number of milliseconds.
-✔️setInterval(function, milliseconds) - Executes a function repeatedly, with a fixed time delay between each call to that function. -->
+✔️setInterval(function, milliseconds) - Executes a function repeatedly, with a fixed time delay between each call to that function.
+✔️clearTimeout(timeoutID) - Clears a timeout set with setTimeout().
+✔️clearInterval(intervalID) - Clears a timeout set with setInterval().
+-->
 <!doctype html>
 <html lang="en">
   <head>
@@ -13,17 +16,17 @@
         <div class="row">
           <div class="col text-center">
             <!-- ✔️setTimeout -->
-            <!-- <p>Want to know my name ?</p>
+            <p>Want to know my name ?</p>
             <p id="myName"></p></br>
             <div class="btn-group">
             <a class="btn btn-primary" id="btn">Click Here</a>  
-            </div></br></br> -->
+            </div></br></br>
 <!-- ----------------------------------------------------------------------------------------------------------------------------->
             <!-- ✔️setInterval and clearInterval -->
-            <p>Can you stop me when i reach at 5 !</p>
+            <!-- <p>Can you stop me when i reach at 5 !</p>
             <div class="btn-group">
             <a class="btn btn-primary" id="btn">Start</a></div></br></br>
-            <a class="btn btn-primary" id="btn1">Stop</a> </div></br></br>
+            <a class="btn btn-primary" id="btn1">Stop</a> </div></br></br> -->
         </div>
     </div>
 </div>
@@ -32,36 +35,36 @@
 
 
 <script>
-// const myName = document.querySelector('#myName');
-// const btn = document.querySelector('#btn');
+const myName = document.querySelector('#myName');
+const btn = document.querySelector('#btn');
 
-// const showMyName = () => {
-//   setTimeout(() => {
-// myName.innerHTML = "Sagar Verma"
-//   }, 1000)
-// }
-// btn.addEventListener('click', showMyName);
+const showMyName = () => {
+  setTimeout(() => {
+myName.innerHTML = "Sagar Verma"
+  }, 1000)
+}
+btn.addEventListener('click', showMyName);
 
 
 // -------------------------------------------------------------------------------------------------------------------------------
-const timerstart = document.querySelector('p');
-const btn = document.querySelector('#btn');
-const btn1 = document.querySelector('#btn1');
-let timeRef;
-let num = 0;
-const showMyNum = () => {
-  timerstart.innerHTML = "Loading ...."
-  timeRef = setInterval(()  => {
-timerstart.innerHTML = `${num}`;
-num ++;
-}, 1000)
-}
-btn.addEventListener('click', showMyNum);
+// const timerstart = document.querySelector('p');
+// const btn = document.querySelector('#btn');
+// const btn1 = document.querySelector('#btn1');
+// let timeRef;
+// let num = 0;
+// const showMyNum = () => {
+//   timerstart.innerHTML = "Loading ...."
+//   timeRef = setInterval(()  => {
+// timerstart.innerHTML = `${num}`;
+// num ++;
+// }, 1000)
+// }
+// btn.addEventListener('click', showMyNum);
 
 
-btn1.addEventListener('click', () => {
-  clearInterval(timeRef);
-});
+// btn1.addEventListener('click', () => {
+//   clearInterval(timeRef);
+// });
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
