--- a/JAVASCRIPT_course/8_time_based_events.html
+++ b/JAVASCRIPT_course/8_time_based_events.html
@@ -16,17 +16,17 @@
         <div class="row">
           <div class="col text-center">
             <!-- ✔️setTimeout -->
-            <p>Want to know my name ?</p>
+            <!-- <p>Want to know my name ?</p>
             <p id="myName"></p></br>
             <div class="btn-group">
             <a class="btn btn-primary" id="btn">Click Here</a>  
-            </div></br></br>
+            </div></br></br> -->
 <!-- ----------------------------------------------------------------------------------------------------------------------------->
             <!-- ✔️setInterval and clearInterval -->
-            <!-- <p>Can you stop me when i reach at 5 !</p>
+            <p>Can you stop me when i reach at 5 !</p>
             <div class="btn-group">
             <a class="btn btn-primary" id="btn">Start</a></div></br></br>
-            <a class="btn btn-primary" id="btn1">Stop</a> </div></br></br> -->
+            <a class="btn btn-primary" id="btn1">Stop</a> </div></br></br>
         </div>
     </div>
 </div>
@@ -35,36 +35,36 @@
 
 
 <script>
-const myName = document.querySelector('#myName');
-const btn = document.querySelector('#btn');
+// const myName = document.querySelector('#myName');
+// const btn = document.querySelector('#btn');
 
-const showMyName = () => {
-  setTimeout(() => {
-myName.innerHTML = "Sagar Verma"
-  }, 1000)
-}
-btn.addEventListener('click', showMyName);
+// const showMyName = () => {
+//   setTimeout(() => {
+// myName.innerHTML = "Sagar Verma"
+//   }, 1000)
+// }
+// btn.addEventListener('click', showMyName);
 
 
 // -------------------------------------------------------------------------------------------------------------------------------
-// const timerstart = document.querySelector('p');
-// const btn = document.querySelector('#btn');
-// const btn1 = document.querySelector('#btn1');
-// let timeRef;
-// let num = 0;
-// const showMyNum = () => {
-//   timerstart.innerHTML = "Loading ...."
-//   timeRef = setInterval(()  => {
-// timerstart.innerHTML = `${num}`;
-// num ++;
-// }, 1000)
-// }
-// btn.addEventListener('click', showMyNum);
+const timerstart = document.querySelector('p');
+const btn = document.querySelector('#btn');
+const btn1 = document.querySelector('#btn1');
+let timeRef;
+let num = 0;
+const showMyNum = () => {
+  timerstart.innerHTML = "Loading ...."
+  timeRef = setInterval(()  => {
+timerstart.innerHTML = `${num}`;
+num ++;
+}, 1000)
+}
+btn.addEventListener('click', showMyNum);
 
 
-// btn1.addEventListener('click', () => {
-//   clearInterval(timeRef);
-// });
+btn1.addEventListener('click', () => {
+  clearInterval(timeRef);
+});
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
