--- a/JAVASCRIPT_course/10_Advanced_JS/FlagApiProject/apicall.html
+++ b/JAVASCRIPT_course/10_Advanced_JS/FlagApiProject/apicall.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fetch API Country</title>
 </head>
 <body>
     <div id = "container"></div>
@@ -35,7 +35,7 @@ request.addEventListener('load', function() {
     </div>
     `;
     container.insertAdjacentHTML('afterbegin', htmlDataMeDikaho);
-    
+
 })
 
 
