--- a/JAVASCRIPT_course/10_Advanced_JS/FlagApiProject/apicall.html
+++ b/JAVASCRIPT_course/10_Advanced_JS/FlagApiProject/apicall.html
@@ -21,7 +21,7 @@ request.send();
 request.addEventListener('load', function() {
 
     // console.log(this.responseText);
-    const [countrydata] = JSON.parse(this.responseText);                           //convert JSON to javascript object 
+    const [countrydata] = JSON.parse(this.responseText);               //convert JSON to javascript object 
     // console.log(countrydata.region);
     const htmlDataMeDikaho = `
     <div style="text-align:center;">
@@ -37,8 +37,22 @@ request.addEventListener('load', function() {
     container.insertAdjacentHTML('afterbegin', htmlDataMeDikaho);
 
 })
+//END
 
-
+/*✔️ Interesting things about JSON(JavaScript Object Notation)-------------------------------------------------------------------
+Convert Javascript Object to JSON use JSON.stringify
+var my_object = {
+    "name": "John",
+    "age": 30,
+    "cars": [
+        "Ford",
+        "BMW",
+        "Fiat"
+    ]
+};
+var object_as_string = JSON.stringify(my_object);
+console.log(object_as_string);                              //Output:{"name":"John","age":30,"cars":["Ford","BMW","Fiat"]}
+*/
 </script>
 </body>
 </html>
