--- a/JAVASCRIPT_course/10_Advanced_JS/TemperaurePoject/index.html
+++ b/JAVASCRIPT_course/10_Advanced_JS/TemperaurePoject/index.html
@@ -8,11 +8,18 @@
     <title>Temperature</title>
 </head>
 <body>
+<form id="tempCalc" onsubmit="calculateTemp(); return false">           <!--return false to avoid auto submit-->
+    <label for="">Please enter the temperature you'd like to convert</label></br>
+        <input type="number" name="temp" id="temp">
+            <select name="temp_diff" id="temp_diff">
+                <option value="cel">°Celsius to Fahrenheit</option>
+                <option value="fah">°Fahrenheit to Celsius</option>
+            </select></br>
 
-        
-        </div>
+            <input type="submit" name="temp"></br>
+            <span id="resultContainer"></span>
+</form>   
 
-    </div>
     <script src="script.js"></script>
 </body>
 </html>
