--- a/JAVASCRIPT_course/10_Advanced_JS/GoogleKeepCloneProject/index.html
+++ b/JAVASCRIPT_course/10_Advanced_JS/GoogleKeepCloneProject/index.html
@@ -9,18 +9,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="heading">
-        <h1><i class="fas fa-sticky-note"></i> Google Keep</h1>
-    </div>
+<div class="heading">
+    <h1><i class="fas fa-sticky-note"></i> Google Keep</h1>
+</div>
 
-    <div class="btn-div">
-        <button class="learn-more" class="add" id="add">
-            <span class="circle" aria-hidden="true">
-                <span class="icon arrow"></span>
-                </span>
-            <span class="button-text">Add Note</span>
-        </button>
-    </div>
+<div class="btn-div">
+    <button class="learn-more" class="add" id="add">
+        <span class="circle" aria-hidden="true">
+            <span class="icon arrow"></span>
+            </span>
+        <span class="button-text">Add Note</span>
+    </button>
+</div>
     
+<!-- 👇We made this in script.js -->
+<!-- <div class="note">
+    <div class="operation">
+        <button class="edit"><i class="fas fa-edit"></i></button>
+        <button class="delete"><i class="fas fa-trash-alt"></i></button>
+    </div>
+    <div class="main"></div>
+    <textarea class=""></textarea>
+</div> -->
+
+
+<script src="script.js"></script>
 </body>
 </html>
