--- a/JAVASCRIPT_course/10_Advanced_JS/GoogleKeepCloneProject/index.html
+++ b/JAVASCRIPT_course/10_Advanced_JS/GoogleKeepCloneProject/index.html
@@ -22,7 +22,7 @@
     </button>
 </div>
     
-<!-- 👇We made this in script.js -->
+<!-- 👇Embedded this in script.js -->
 <!-- <div class="note">
     <div class="operation">
         <button class="edit"><i class="fas fa-edit"></i></button>
