--- a/JAVASCRIPT_course/10_Advanced_JS/RegstrationForm/index.html
+++ b/JAVASCRIPT_course/10_Advanced_JS/RegstrationForm/index.html
@@ -15,31 +15,31 @@
         </div>
         <form id="form" class="form">
             <div class="form-control">
-                <label for="name">Username</label>
-                <input type="text" id="username" name="" placeholder="Enter your fullname">
+                <label>Username</label>
+                <input type="text" id="username" name="" placeholder="Enter your fullname" autocomplete="off">
                 <i class="fa-regular fa-circle-check"></i>
                 <i class="fa-solid fa-exclamation"></i>
                 <small>Error Msg</small>
             </div>
 
             <div class="form-control">
-                <label for="name">Email</label>
-                <input type="email" id="email" name="" placeholder="Enter your email">
+                <label>Email</label>
+                <input type="email" id="email" name="" placeholder="Enter your email" autocomplete="off">
                 <i class="fa-regular fa-circle-check"></i>
                 <i class="fa-solid fa-exclamation"></i>
                 <small>Error Msg</small>
             </div>
 
             <div class="form-control">
-                <label for="name">Phone Number</label>
-                <input type="number" id="phone" name="" placeholder="Enter your Phone Number">
+                <label>Phone Number</label>
+                <input type="number" id="phone" name="" placeholder="Enter your Phone Number" autocomplete="off">
                 <i class="fa-regular fa-circle-check"></i>
                 <i class="fa-solid fa-exclamation"></i>
                 <small>Error Msg</small>
             </div>
 
             <div class="form-control">
-                <label for="name">Password</label>
+                <label>Password</label>
                 <input type="password" id="password" name="" placeholder="Enter your password">
                 <i class="fa-regular fa-circle-check"></i>
                 <i class="fa-solid fa-exclamation"></i>
@@ -47,7 +47,7 @@
             </div>
 
             <div class="form-control">
-                <label for="name">Confirm Password</label>
+                <label">Confirm Password</label>
                 <input type="password" id="cpassword" name="" placeholder="Enter your password again">
                 <i class="fa-regular fa-circle-check"></i>
                 <i class="fa-solid fa-exclamation"></i>
