--- a/JAVASCRIPT_course/10_Advanced_JS/RegstrationForm/index.html
+++ b/JAVASCRIPT_course/10_Advanced_JS/RegstrationForm/index.html
@@ -24,7 +24,7 @@
 
             <div class="form-control">
                 <label>Email</label>
-                <input type="email" id="email" name="" placeholder="Enter your email" autocomplete="off">
+                <input type="Email" id="email" name="" placeholder="Enter your email" autocomplete="off">
                 <i class="fa-regular fa-circle-check"></i>
                 <i class="fa-solid fa-exclamation"></i>
                 <small>Error Msg</small>
