--- a/JAVASCRIPT_course/10_Advanced_JS/RegstrationForm/index.html
+++ b/JAVASCRIPT_course/10_Advanced_JS/RegstrationForm/index.html
@@ -54,8 +54,36 @@
                 <small>Error Msg</small>
             </div>
             <input type="submit" value="Submit" class="btn" id="">
-        
         </form>
     </div>
+
+<script type="text/javascript">
+    const form = document.getElementById('form');
+    const username = document.getElementById('username');
+    const email = document.getElementById('email');
+    const phone = document.getElementById('phone');
+    const password = document.getElementById('password');
+    const cpassword = document.getElementById('cpassword');
+
+    //add event
+    form.addEventListener('submit', (event) => {
+        event.preventDefault();
+        validate();
+    })
+
+    //define the validate function
+    const validate = () => {
+        const form = form.value.trim();
+        const username = username.value.trim();
+        const email = email.value.trim();
+        const phone = phone.value.trim();
+        const password = password.value.trim();
+        const cpassword = cpassword.value.trim();
+    }
+
+
+
+
+</script>
 </body>
 </html>
