--- a/JAVASCRIPT_course/10_Advanced_JS/RegstrationForm/index.html
+++ b/JAVASCRIPT_course/10_Advanced_JS/RegstrationForm/index.html
@@ -57,6 +57,8 @@
         </form>
     </div>
 
+
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script type="text/javascript">
     const form = document.getElementById('form');
     const username = document.getElementById('username');
@@ -79,10 +81,27 @@
             event.preventDefault();
             validate();
         })
-        
+        const sendData = (usernameVal, sRate, count) => {
+            if(sRate === count){
+                alert("Regstration Successful ");
+                swal("Welcome!" + usernameVal, "Regstration Successful", "success");
+                location.href = `login.html?username=${usernameVal}`;
+            }
+        }
+
         //for final validation
-        const successMsg = () => {
-            
+        const successMsg = (usernameVal) => {
+            let formCon  = document.getElementsByClassName('form-control');
+            var count = formCon.length - 1;
+            for(var i = 0; i < formCon.length; i++){
+               if(formCon[i].className === "form-control success"){
+                   console.log(sRate);
+                   var sRate = 0 + i;
+                   sendData(usernameVal, sRate, count);
+                }else{
+                    return false;
+                }
+            }
         }
         //more validate email
         const isEmail = (emailVal) => {
@@ -134,7 +153,7 @@
             setSuccessMsg(cpassword);
         }
 
-        successMsg();
+        successMsg(usernameVal);
 
 
 
