--- a/JAVASCRIPT_course/10_Advanced_JS/RegstrationForm/index.html
+++ b/JAVASCRIPT_course/10_Advanced_JS/RegstrationForm/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h2>Registration Form</h2>
+            <h2>Sign Up</h2>
         </div>
         <form id="form" class="form">
             <div class="form-control">
@@ -47,7 +47,7 @@
             </div>
 
             <div class="form-control">
-                <label">Confirm Password</label>
+                <label>Confirm Password</label>
                 <input type="password" id="cpassword" name="" placeholder="Enter your password again">
                 <i class="fa-regular fa-circle-check"></i>
                 <i class="fa-solid fa-exclamation"></i>
