--- a/JAVASCRIPT_course/10_Advanced_JS/RegstrationForm/index.html
+++ b/JAVASCRIPT_course/10_Advanced_JS/RegstrationForm/index.html
@@ -74,7 +74,7 @@
     })
     const sendData = (usernameVal, sRate, count) => {
         if(sRate === count){
-            alert("Regstration Successfull ");
+            // alert("Regstration Successfull ");
             swal("Welcome! " + usernameVal, "Regstration Successfull", "success");
             location.href = `login.html?username=${usernameVal}`;
         }
