--- a/JAVASCRIPT_course/10_Advanced_JS/SpotifyClone/index.html
+++ b/JAVASCRIPT_course/10_Advanced_JS/SpotifyClone/index.html
@@ -10,13 +10,25 @@
 <body>
     <nav>
         <ul>
-            <li class="brand"><img src="logo.png" alt="spotify"></li>
+            <li class="brand"><img src="logo.png" alt="spotify">Spotify</li>
             <li>Home</li>
             <li>About</li>
         </ul>
     </nav>
+
+    <div class="container">
+        <h1>Songs</h1>
+        <div class="songList"></div>
+        <div class="songBanner"></div>
+    </div>
+    <div class="bottom">
+        <input type="range" class="range" id="myProgressBar" min="0" max="100" >
+        <div class="icons">
+            <!-- fontawesome icons -->
+            
+        </div>
+    </div>
+
 <script src="script.js"></script>
-
-
 </body>
 </html>
