--- a/JAVASCRIPT_course/10_Advanced_JS/SpotifyClone/index.html
+++ b/JAVASCRIPT_course/10_Advanced_JS/SpotifyClone/index.html
@@ -17,18 +17,27 @@
     </nav>
 
     <div class="container">
-        <h1>Songs</h1>
-        <div class="songList"></div>
+        <div class="songList">
+            <h1>Best of 2022</h1>
+            <div class="songItem">
+                <img src="coverATC.jpg" alt="1" >
+                <span>JUMP by Against The Current</span>
+                <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
+            </div>
+        </div>
         <div class="songBanner"></div>
     </div>
     <div class="bottom">
         <input type="range" class="range" id="myProgressBar" min="0" max="100" >
         <div class="icons">
             <!-- fontawesome icons -->
-            
+            <i class="fas fa-3x fa-step-backward"></i>
+            <i class="far fa-3x fa-play-circle"></i>
+            <i class="fas fa-3x fa-step-forward"></i>
+
         </div>
     </div>
-
+<script src="https://kit.fontawesome.com/2d131ca70f.js" crossorigin="anonymous"></script>
 <script src="script.js"></script>
 </body>
 </html>
