--- a/JAVASCRIPT_course/10_Advanced_JS/SpotifyClone/index.html
+++ b/JAVASCRIPT_course/10_Advanced_JS/SpotifyClone/index.html
@@ -19,12 +19,38 @@
     <div class="container">
         <div class="songList">
             <h1>Best of 2022</h1>
+            <div class="songItemContainer">
+            <div class="songItem">
+                <img src="coverATC.jpg" alt="1" >
+                <span>JUMP by Against The Current</span>
+                <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
+            </div>
+
+            <div class="songItem">
+                <img src="coverATC.jpg" alt="1" >
+                <span>JUMP by Against The Current</span>
+                <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
+            </div>
+
+            <div class="songItem">
+                <img src="coverATC.jpg" alt="1" >
+                <span>JUMP by Against The Current</span>
+                <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
+            </div>
+
+            <div class="songItem">
+                <img src="coverATC.jpg" alt="1" >
+                <span>JUMP by Against The Current</span>
+                <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
+            </div>
+
             <div class="songItem">
                 <img src="coverATC.jpg" alt="1" >
                 <span>JUMP by Against The Current</span>
                 <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
             </div>
         </div>
+    </div>
         <div class="songBanner"></div>
     </div>
     <div class="bottom">
@@ -34,7 +60,9 @@
             <i class="fas fa-3x fa-step-backward"></i>
             <i class="far fa-3x fa-play-circle"></i>
             <i class="fas fa-3x fa-step-forward"></i>
-
+        </div>
+        <div class="songInfo">
+            <img src="playing.gif" width="42px" alt="" >Jump By ATC
         </div>
     </div>
 <script src="https://kit.fontawesome.com/2d131ca70f.js" crossorigin="anonymous"></script>
