--- a/JAVASCRIPT_course/10_Advanced_JS/SpotifyClone/index.html
+++ b/JAVASCRIPT_course/10_Advanced_JS/SpotifyClone/index.html
@@ -58,7 +58,7 @@
         <div class="icons">
             <!-- fontawesome icons -->
             <i class="fas fa-3x fa-step-backward"></i>
-            <i class="far fa-3x fa-play-circle"></i>
+            <i class="far fa-3x fa-play-circle" id="masterPlay"></i>
             <i class="fas fa-3x fa-step-forward"></i>
         </div>
         <div class="songInfo">
