--- a/JAVASCRIPT_course/10_Advanced_JS/SpotifyClone/index.html
+++ b/JAVASCRIPT_course/10_Advanced_JS/SpotifyClone/index.html
@@ -21,31 +21,31 @@
             <h1>Best of 2022</h1>
             <div class="songItemContainer">
             <div class="songItem">
-                <img src="coverATC.jpg" alt="1" >
+                <img src="covers/1.jpg" alt="1" >
                 <span>JUMP by Against The Current</span>
                 <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
             </div>
 
             <div class="songItem">
-                <img src="coverATC.jpg" alt="1" >
+                <img src="covers/1.jpg" alt="1" >
                 <span>JUMP by Against The Current</span>
                 <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
             </div>
 
             <div class="songItem">
-                <img src="coverATC.jpg" alt="1" >
+                <img src="covers/1.jpg" alt="1" >
                 <span>JUMP by Against The Current</span>
                 <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
             </div>
 
             <div class="songItem">
-                <img src="coverATC.jpg" alt="1" >
+                <img src="covers/1.jpg" alt="1" >
                 <span>JUMP by Against The Current</span>
                 <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
             </div>
 
             <div class="songItem">
-                <img src="coverATC.jpg" alt="1" >
+                <img src="covers/1.jpg" alt="1" >
                 <span>JUMP by Against The Current</span>
                 <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
             </div>
@@ -54,7 +54,7 @@
         <div class="songBanner"></div>
     </div>
     <div class="bottom">
-        <input type="range" class="range" id="myProgressBar" min="0" max="100" >
+        <input type="range" class="range" id="myProgressBar" min="0" value="0" max="100" >
         <div class="icons">
             <!-- fontawesome icons -->
             <i class="fas fa-3x fa-step-backward"></i>
@@ -62,7 +62,7 @@
             <i class="fas fa-3x fa-step-forward"></i>
         </div>
         <div class="songInfo">
-            <img src="playing.gif" width="42px" alt="" >Jump By ATC
+            <img src="playing.gif" width="50px" alt="" id="gif">Jump By ATC
         </div>
     </div>
 <script src="https://kit.fontawesome.com/2d131ca70f.js" crossorigin="anonymous"></script>
