--- a/JAVASCRIPT_course/10_Advanced_JS/SpotifyClone/index.html
+++ b/JAVASCRIPT_course/10_Advanced_JS/SpotifyClone/index.html
@@ -21,32 +21,32 @@
             <h1>Best of 2022</h1>
             <div class="songItemContainer">
             <div class="songItem">
-                <img src="covers/1.jpg" alt="1" >
-                <span>JUMP by Against The Current</span>
-                <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
+                <img alt="1" >
+                <span class="songName">JUMP by Against The Current</span>
+                <span class="songlistplay"><span class="timestamp">05:34 <i class="far songItemPlay fa-play-circle"></i></span></span>
             </div>
 
             <div class="songItem">
-                <img src="covers/1.jpg" alt="1" >
-                <span>JUMP by Against The Current</span>
-                <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
+                <img alt="1">
+                <span class="songName">JUMP by Against The Current</span>
+                <span class="songlistplay"><span class="timestamp">05:34 <i class="far songItemPlay fa-play-circle"></i></span></span>
             </div>
 
             <div class="songItem">
-                <img src="covers/1.jpg" alt="1" >
-                <span>JUMP by Against The Current</span>
-                <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
+                <img alt="1" >
+                <span class="songName">JUMP by Against The Current</span>
+                <span class="songlistplay"><span class="timestamp">05:34 <i class="far songItemPlay fa-play-circle"></i></span></span>
             </div>
 
             <div class="songItem">
-                <img src="covers/1.jpg" alt="1" >
-                <span>JUMP by Against The Current</span>
-                <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
+                <img alt="1" >
+                <span class="songName">JUMP by Against The Current</span>
+                <span class="songlistplay"><span class="timestamp">05:34 <i class="far songItemPlay fa-play-circle"></i></span></span>
             </div>
 
             <div class="songItem">
-                <img src="covers/1.jpg" alt="1" >
-                <span>JUMP by Against The Current</span>
+                <img alt="1" >
+                <span class="songName">JUMP by Against The Current</span>
                 <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
             </div>
         </div>
