--- a/JAVASCRIPT_course/10_Advanced_JS/SpotifyClone/index.html
+++ b/JAVASCRIPT_course/10_Advanced_JS/SpotifyClone/index.html
@@ -23,31 +23,31 @@
             <div class="songItem">
                 <img alt="1" >
                 <span class="songName">JUMP by Against The Current</span>
-                <span class="songlistplay"><span class="timestamp">05:34 <i class="far songItemPlay fa-play-circle"></i></span></span>
+                <span class="songlistplay"><span class="timestamp">05:34 <i id="0" class="far songItemPlay fa-play-circle"></i></span></span>
             </div>
 
             <div class="songItem">
                 <img alt="1">
                 <span class="songName">JUMP by Against The Current</span>
-                <span class="songlistplay"><span class="timestamp">05:34 <i class="far songItemPlay fa-play-circle"></i></span></span>
+                <span class="songlistplay"><span class="timestamp">05:34 <i id="1" class="far songItemPlay fa-play-circle"></i></span></span>
             </div>
 
             <div class="songItem">
                 <img alt="1" >
                 <span class="songName">JUMP by Against The Current</span>
-                <span class="songlistplay"><span class="timestamp">05:34 <i class="far songItemPlay fa-play-circle"></i></span></span>
+                <span class="songlistplay"><span class="timestamp">05:34 <i id="2" class="far songItemPlay fa-play-circle"></i></span></span>
             </div>
 
             <div class="songItem">
                 <img alt="1" >
                 <span class="songName">JUMP by Against The Current</span>
-                <span class="songlistplay"><span class="timestamp">05:34 <i class="far songItemPlay fa-play-circle"></i></span></span>
+                <span class="songlistplay"><span class="timestamp">05:34 <i id="3" class="far songItemPlay fa-play-circle"></i></span></span>
             </div>
 
             <div class="songItem">
                 <img alt="1" >
                 <span class="songName">JUMP by Against The Current</span>
-                <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
+                <span class="songlistplay"><span class="timestamp">05:34 <i id="4" class="far fa-play-circle"></i></span></span>
             </div>
         </div>
     </div>
@@ -57,9 +57,9 @@
         <input type="range" class="range" id="myProgressBar" min="0" value="0" max="100" >
         <div class="icons">
             <!-- fontawesome icons -->
-            <i class="fas fa-3x fa-step-backward"></i>
+            <i class="fas fa-3x fa-step-backward" id="previous"></i>
             <i class="far fa-3x fa-play-circle" id="masterPlay"></i>
-            <i class="fas fa-3x fa-step-forward"></i>
+            <i class="fas fa-3x fa-step-forward" id="next"></i>
         </div>
         <div class="songInfo">
             <img src="playing.gif" width="50px" alt="" id="gif">Jump By ATC
