--- a/JAVASCRIPT_course/10_Advanced_JS/SpotifyClone/index.html
+++ b/JAVASCRIPT_course/10_Advanced_JS/SpotifyClone/index.html
@@ -62,7 +62,7 @@
             <i class="fas fa-3x fa-step-forward" id="next"></i>
         </div>
         <div class="songInfo">
-            <img src="playing.gif" width="50px" alt="" id="gif">Jump By ATC
+            <img src="playing.gif" width="50px" alt="" id="gif"><span id="masterSongName"></span>
         </div>
     </div>
 <script src="https://kit.fontawesome.com/2d131ca70f.js" crossorigin="anonymous"></script>
