--- a/JAVASCRIPT_course/10_Advanced_JS/TemperaurePoject/index.html
+++ b/JAVASCRIPT_course/10_Advanced_JS/TemperaurePoject/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Temperature</title>
+    <title>Temperature Project By S4nfs</title>
 </head>
 <body>
 <form id="tempCalc" onsubmit="calculateTemp(); return false">           <!--return false to avoid auto submit-->
@@ -23,3 +23,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+<!-- Ask me about the code, I will explain it to you at https://github.com/S4nfs -->
