--- a/JAVASCRIPT_course/10_Advanced_JS/JokesApiProject/index.html
+++ b/JAVASCRIPT_course/10_Advanced_JS/JokesApiProject/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Best Jokes</title>
+    <title>Best Jokes By S4nfs</title> <!-- Ask me about the code, I will explain it to you at https://github.com/S4nfs -->
 </head>
 <body>
     <div class="container" style="text-align:center;">
@@ -14,7 +14,7 @@
     </div>
 
 
-
+    
     <script src="script.js"></script>
 </body>
 </html>
