--- a/JAVASCRIPT_course/10_Advanced_JS/RegstrationForm/login.html
+++ b/JAVASCRIPT_course/10_Advanced_JS/RegstrationForm/login.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Registration Form By S4nfs</title>
 </head>
 <body>
-    <h1>Thank you for Registration</h1>
+    <h1>Thank you for Registration, Follow me on Github <a href="https://github.com/S4nfs"></a></h1>
 </body>
 </html>
