--- a/JAVASCRIPT_course/10_Advanced_JS/SpotifyClone/index.html
+++ b/JAVASCRIPT_course/10_Advanced_JS/SpotifyClone/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify Clone</title>
+    <title>Spotify Clone By S4nfs</title>  <!-- Ask me about the code, I will explain it to you at https://github.com/S4nfs -->
     <link rel="stylesheet" href="style.css" class="css">
 </head>
 <body>
@@ -69,3 +69,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
+<!-- Ask me about the code, I will explain it to you at https://github.com/S4nfs -->
