--- a/JAVASCRIPT_course/10_Advanced_JS/SpotifyClone/index.html
+++ b/JAVASCRIPT_course/10_Advanced_JS/SpotifyClone/index.html
@@ -12,7 +12,7 @@
         <ul>
             <li class="brand"><img src="logo.png" alt="spotify">Spotify</li>
             <li>Home</li>
-            <li>About</li>
+            <li><a href="https://github.com/S4nfs" style="color: white">About S4nfs</a></li>
         </ul>
     </nav>
 
@@ -47,7 +47,7 @@
             <div class="songItem">
                 <img alt="1" >
                 <span class="songName">JUMP by Against The Current</span>
-                <span class="songlistplay"><span class="timestamp">05:34 <i id="4" class="far fa-play-circle"></i></span></span>
+                <span class="songlistplay"><span class="timestamp">05:34 <i id="4" class="far songItemPlay far fa-play-circle"></i></span></span>
             </div>
         </div>
     </div>
