--- a/JAVASCRIPT_course/10_Advanced_JS/SpotifyClone/index.html
+++ b/JAVASCRIPT_course/10_Advanced_JS/SpotifyClone/index.html
@@ -57,9 +57,9 @@
         <input type="range" class="range" id="myProgressBar" min="0" value="0" max="100" >
         <div class="icons">
             <!-- fontawesome icons -->
-            <i class="fas fa-3x fa-step-backward" id="previous"></i>
-            <i class="far fa-3x fa-play-circle" id="masterPlay"></i>
-            <i class="fas fa-3x fa-step-forward" id="next"></i>
+            <i class="fas fa-2x fa-step-backward" id="previous"></i>
+            <i class="far fa-2x fa-play-circle" id="masterPlay" style="margin: 0 10px;"></i>
+            <i class="fas fa-2x fa-step-forward" id="next"></i>
         </div>
         <div class="songInfo">
             <img src="playing.gif" width="50px" alt="" id="gif"><span id="masterSongName"></span>
