updated Dom Manipulation

--- a/JAVASCRIPT_course/6_BOM-DOM.html
+++ b/JAVASCRIPT_course/6_BOM-DOM.html
@@ -16,12 +16,20 @@
             background-color: mediumslateblue;
             padding: 9px;
         }
+        .bg-primary{
+            background-color: cyan;
+        }
+
+        .text-hint{
+            color: orangered;
+        }
     </style>
 </head>
 <body>
     <h1>Welcome to this Javascript tutorial</h1>
     <div id="firstContainer" class="container">
     <button id="click">Click Me</button>
+    <p>Here is one little hint</p>
 </div>
 <div class="container">
     <p>This is a paragraph</p>
