Clock project updated

--- a/JAVASCRIPT_course/11_Advanced_JS/ClockProject/index.html
+++ b/JAVASCRIPT_course/11_Advanced_JS/ClockProject/index.html
@@ -15,52 +15,52 @@
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
+                    <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
+                    </li>
+                    <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
-                  </li>
-                  <li class="nav-item dropdown">
+                    </li>
+                    <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
+                        Dropdown
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        <li><a class="dropdown-item" href="#">Action</a></li>
+                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#">Something else here</a></li>
                     </ul>
-                  </li>
-                  <li class="nav-item">
+                    </li>
+                    <li class="nav-item">
                     <a class="nav-link disabled">Disabled</a>
-                  </li>
+                    </li>
                 </ul>
                 <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
-              </div>
+                </div>
             </div>
-          </nav>
-    
-          <div class="container my-4">
+            </nav>
+
+            <div class="container my-4">
             <div class="jumbotron">
                 <h1 class="display-4">Current Time is: <span id="time"></span></h1>
                 <p class="lead">here</p>
                 <hr class="my-4">
                 <p>Country Based Time</p>
                 <p class="lead">
-                  <a class="btn btn-primary btn-lg" href="#" role="button">Browse Times</a>
+                    <a class="btn btn-primary btn-lg" href="#" role="button">Browse Times</a>
                 </p>
-              </div>
-          </div>
+                </div>
+            </div>
     
 
 
@@ -68,11 +68,16 @@
     let a;
     let date;
     let time;
+    const options = {
+        weekday: "long",
+        day: "numeric",
+        month: "long"
+    };
     setInterval(() => {
     a = new Date();
-    date = a.toLocaleDateString();
+    date = a.toLocaleDateString(undefined, options);
     time = a.getHours() + ":" + a.getMinutes() + ":" + a.getSeconds();
-    document.getElementById('time').innerHTML = time + " on " + date;
+    document.getElementById('time').innerHTML = time + "<br> on " + date;
     }, 1000);
 </script>
 
