--- a/Node.JS_Course/WeatherApp/home.html
+++ b/Node.JS_Course/WeatherApp/home.html
@@ -19,11 +19,59 @@
         <i class="far fa-sun" style="color: orange; margin-top: 20px"></i>
       </div>
       <div class="info">
-        <h2 class="location"><i class="fas fa-location-arrow" style="color: grey"></i>Pune, In</h2>
-        <p id="date">Monday | January 31</p>
+        <h2 class="location"><i class="fas fa-location-arrow" style="color: rgb(0, 0, 0)"></i>Pune, In</h2>
+        <p id="date">Monday | January 30</p>
         <h1 class="temp">26.49</h1>
         <h3 class="empmin_max">Min 26.4 | max 28.55</h3>
       </div>
     </div></div>
+
+
+    <script>
+      const curDate = document.getElementById('date');
+      let weathercon = document.getElementById('weathericon');
+      const tempStatus = "Clouds";
+
+      //Get current day
+      const getCurrentDay = () => {
+        var weekday = new Array(7);
+        weekday[0] = "Sunday";
+        weekday[1] = "Monday";
+        weekday[2] = "Tuesday";
+        weekday[3] = "Wednesday";
+        weekday[4] = "Thursday"
+        weekday[5] = "Friday"
+        weekday[6] = "Saturday"
+
+        let currentTime = new Date();
+        let day = weekday[currentTime.getDay()];
+        return day;
+      };
+
+      //Get Months
+      const getCurrentTime = () => {
+        var months = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
+        var now = new Date();
+        var month = months[now.getMonth() + 1];
+        var date = now.getDate();
+
+        let hours = now.getHours();
+        let mins = now.getMinutes();
+        
+        let period = "AM";
+        if (hours > 11) {
+          period = "PM";
+          if(hours > 12) {
+            hours = hours -= 12;
+          }
+        }if(mins < 10) {
+          mins = "0" + mins;
+        }
+        return `${month} ${date} | ${hours}:${mins} ${period}`;
+      };
+
+curDate.innerHTML = getCurrentDay() + " | " + getCurrentTime();
+
+    </script>
   </body>
 </html>
