Weather app in-progress updated

--- a/Node.JS_Course/WeatherApp/home.html
+++ b/Node.JS_Course/WeatherApp/home.html
@@ -19,10 +19,10 @@
         <i class="far fa-sun" style="color: orange; margin-top: 20px"></i>
       </div>
       <div class="info">
-        <h2 class="location"><i class="fas fa-location-arrow" style="color: rgb(0, 0, 0)"></i>Pune, In</h2>
+        <h2 class="location"><i class="fas fa-location-arrow" style="color: rgb(0, 0, 0)"></i>{%location%},{%country%}</h2>
         <p id="date">Monday | January 30</p>
-        <h1 class="temp">26.49</h1>
-        <h3 class="empmin_max">Min 26.4 | max 28.55</h3>
+        <h1 class="temp">{%tempval%}</h1>
+        <h3 class="empmin_max">Min {%tempmin%}| max {%tempmax%}</h3>
       </div>
     </div></div>
 
