--- a/Node.JS_Course/WeatherApp/home.html
+++ b/Node.JS_Course/WeatherApp/home.html
@@ -21,7 +21,7 @@
       <div class="info">
         <h2 class="location"><i class="fas fa-location-arrow" style="color: rgb(0, 0, 0)"></i>{%location%},{%country%}</h2>
         <p id="date">Monday | January 30</p>
-        <h1 class="temp">{%tempval%}</h1>
+        <h1 class="temp">{%tempVal%}</h1>
         <h3 class="empmin_max">Min {%tempmin%}| max {%tempmax%}</h3>
       </div>
     </div></div>
