Expres JS template engine to serve Dynamic content

--- a/Node.JS_Course/12_ExpressJStemplateEngine/public/index.html
+++ b/Node.JS_Course/12_ExpressJStemplateEngine/public/index.html
@@ -8,6 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This page is served using Express but we are updating it using Template engine & hello {{user}}</h1>
+    <h1>This page is served using Express but we are updating it using Template engine & hello</h1>
 </body>
 </html>
