--- a/Node.JS_Course/PROJECTS/ExpressWeb/public/index.html
+++ b/Node.JS_Course/PROJECTS/ExpressWeb/public/index.html
@@ -37,14 +37,14 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <link rel="shortcut icon" href="images/logo.jpg" type="image/png" />
   </head>
   <body>
     <div class="container-fluid main_menu">
       <div class="row">
         <div class="col-md-10 col-12 mx-auto">
-          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="#"
               ><i class="far fa-snowflake" aria-hidden="true"></i> Express Web
               Weather <i class="far fa-snowflake" aria-hidden="true"></i
@@ -88,48 +88,89 @@
           <div class="row">
             <!-- main header left -->
             <div class="col-md-6 col-12 main_header_left">
-            <p>Welcome to Express Web Weather</p>
-            <h1>Get The Latest <span>Weather</span> Info Of Your City</h1>
-            <a href="/weather" class="href"><button>Check Now</button></a>
-        </div>
+              <p>Welcome to Express Web Weather</p>
+              <h1>Get The Latest <span>Weather</span> Info Of Your City</h1>
+              <a href="/weather" class="href"><button>Check Now</button></a>
+            </div>
             <!-- main header right -->
             <div class="col-md-6 col-12 main_header_right">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img class="w-100" src="/images/bg1.png" alt="First slide">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="w-100" src="/images/bg2.jpg" alt="Second slide">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="w-100" src="/images/bg3.jpg" alt="Third slide">
-                      </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Next</span>
-                    </a>
+              <div
+                id="carouselExampleIndicators"
+                class="carousel slide"
+                data-ride="carousel"
+              >
+                <ol class="carousel-indicators">
+                  <li
+                    data-target="#carouselExampleIndicators"
+                    data-slide-to="0"
+                    class="active"
+                  ></li>
+                  <li
+                    data-target="#carouselExampleIndicators"
+                    data-slide-to="1"
+                  ></li>
+                  <li
+                    data-target="#carouselExampleIndicators"
+                    data-slide-to="2"
+                  ></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img
+                      class="w-100"
+                      src="/images/bg1.png"
+                      alt="First slide"
+                    />
                   </div>
+                  <div class="carousel-item">
+                    <img
+                      class="w-100"
+                      src="/images/bg2.jpg"
+                      alt="Second slide"
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      class="w-100"
+                      src="/images/bg3.jpg"
+                      alt="Third slide"
+                    />
+                  </div>
+                </div>
+                <a
+                  class="carousel-control-prev"
+                  href="#carouselExampleIndicators"
+                  role="button"
+                  data-slide="prev"
+                >
+                  <span
+                    class="carousel-control-prev-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a
+                  class="carousel-control-next"
+                  href="#carouselExampleIndicators"
+                  role="button"
+                  data-slide="next"
+                >
+                  <span
+                    class="carousel-control-next-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-
     <!-- footer -->
     <footer>
-        <p>Made with Coffee & VS Code</p>
+      <p>Made with ☕ & VS Code</p>
     </footer>
   </body>
 </html>
