Express Web Homepage created

--- a/Node.JS_Course/PROJECTS/ExpressWeb/public/index.html
+++ b/Node.JS_Course/PROJECTS/ExpressWeb/public/index.html
@@ -89,7 +89,7 @@
             <!-- main header left -->
             <div class="col-md-6 col-12 main_header_left">
               <p>Welcome to Express Web Weather</p>
-              <h1>Get The Latest <span>Weather</span> Info Of Your City</h1>
+              <h1>Get The Latest <span class="text_clr">Weather</span> Info Of Your City</h1>
               <a href="/weather" class="href"><button>Check Now</button></a>
             </div>
             <!-- main header right -->
