Express Web Weather APi Completed

--- a/Node.JS_Course/PROJECTS/WeatherApp/home.html
+++ b/Node.JS_Course/PROJECTS/WeatherApp/home.html
@@ -78,7 +78,7 @@ if(tempStatus == "Sunny"){
         return day;
       };
 
-      //Get Months
+      //Get and format Current Time
       const getCurrentTime = () => {
         var months = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
         var now = new Date();
